[package]
name = "wifiduino"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.11", features = ["blocking", "default-tls", "cookies"] }
base64 = "0.13.0"
qrcode = "0.12.0"

# Damn small binaries ftw
[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"  # Optimize for size.
